# reels-maker

./: .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  makefile  pyproject.toml
assets/fonts/Gabarito/: OFL.txt
assets/fonts/Rubik/: OFL.txt
data/: audios.json  background_audios.json  background_videos.json  file_mapping.json  languages.json  videos.json  voices.json
data/cookies/: cookie-dark-mode.json
scripts/: download_background_media.py
src/: app.py  config.py  main.py  schemas.py
src/pipelines/: __init__.py  indexation.py  pipelines.py  reddit_comments.py  reddit_stories.py  reddit_threads.py  schemas.py  stt.py  tts.py  videos.py
src/utils/: background.py  common.py  path.py  stt.py  tts.py
src/utils/media/: audio.py  video.py
src/utils/reddit/: post.py  screenshot.py
