[tool.poetry]
name = "reels-maker"
version = "0.1.0"
description = ""
authors = ["Elias Prost <elias.prost@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "3.11.*"
praw = "^7.8.1"
pydantic-settings = "2.7.1"
pydantic = "2.10.6"
playwright = "1.50.0"
loguru = "0.7.2"
transformers = ">=4.27.4"
yt-dlp = "2025.1.26"
streamlit = "1.42.0"
watchdog = "^6.0.0"
ffmpeg-python = "0.2.0"
pillow = "9.5.0"
openai-whisper = "20240930"
pysubs2 = "1.8.0"
srt = "3.5.3"
pytrends = "^4.9.2"
langid = "1.1.6"
torch = "2.6.0"
coqui-tts = "0.26.0"
accelerate = "1.4.0"
numpy = "1.26.4"
spacy = "3.7.0"
moviepy = "1.0.3"
pandas = "^2.2.3"
spacy-transformers = "^1.3.8"
sentence-transformers = "^4.0.2"
tf-keras = "^2.19.0"
faiss-cpu = "^1.10.0"
rank-bm25 = "^0.2.2"
unidic = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.2"
ipywidgets = "^8.1.5"
flake8-pyproject = "^1.2.3"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
